moved burger button to the right

--- a/src/utils/css/screen.css
+++ b/src/utils/css/screen.css
@@ -263,7 +263,7 @@ body {
 .nav-burger {
   display: none;
   position: absolute;
-  left: 0;
+  right: 0;
   z-index: 9999;
   padding: 12px 12px 12px 0;
 }
