--- a/src/utils/css/screen.css
+++ b/src/utils/css/screen.css
@@ -183,6 +183,10 @@ body {
   opacity: 1;
 }
 
+.nav-logo {
+  height: 50px;
+}
+
 .site-head-center {
   position: absolute;
   display: flex;
@@ -278,7 +282,7 @@ body {
   .site-head-container {
     flex-direction: column;
     justify-content: flex-start;
-    height: 40px;
+    height: 60px;
     background: rgba(255, 255, 255, 0);
     z-index: -1;
     transition: all 0.4s ease-out;
@@ -311,9 +315,10 @@ body {
   }
   .nav {
     width: 100%;
+    padding: 50%;
+    display: flex;
+    align-items: center;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
     margin: 3vw 0 0 0;
   }
   .site-head-left {
