--- a/src/utils/css/screen.css
+++ b/src/utils/css/screen.css
@@ -54,7 +54,7 @@ body {
 /* ---------------------------------------------------------- */
 
 .site-wrapper {
-  padding: 3vw;
+  padding: 5vw;
   min-height: 100vh;
 }
 @media (max-width: 850px) {
@@ -395,11 +395,29 @@ body {
 
 .hero {
   padding-top: calc(30vh - 60px);
+  height: calc(100vh - 60px);
 }
 
 .hero > p {
   color: #b4b4b4;
   width: 60vw;
+}
+
+.hero > img.hero-mobile {
+  display: none;
+}
+.hero > img.hero-desktop {
+  display: block;
+  margin-bottom: 5vh;
+}
+
+@media (max-width: 700px) {
+  .hero > img.hero-mobile {
+    display: block;
+  }
+  .hero > img.hero-desktop {
+    display: none;
+  }
 }
 
 /* Post Feed
