--- a/src/utils/css/screen.css
+++ b/src/utils/css/screen.css
@@ -123,14 +123,16 @@ body {
 }
 
 .site-foot {
-  margin: 3vw 0 1vw;
-  text-align: center;
+  position: fixed;
+  top: 90vh;
+  left: 5vw;
   color: color(var(--color-border) l(-20%));
   font-size: 1.4rem;
 }
 
 .site-foot a {
   color: var(--color-base);
+  margin-right: 3rem;
 }
 
 /* Site Navigation
@@ -138,6 +140,9 @@ body {
 
 .site-head {
   position: relative;
+  /* position: fixed;
+  top: 5vh;
+   */
   z-index: 300;
   margin-top: -10px;
   font-size: 1.35rem;
@@ -169,22 +174,32 @@ body {
   display: block;
   margin: 0;
   padding: 0;
+  font-size: 3rem;
 }
 
 .site-head-left a,
 .site-head-right a {
-  display: block;
+  /* display: block;
   margin: 0;
   padding: 10px 12px;
   color: var(--color-base);
   font-weight: 600;
-  opacity: 0.4;
+  opacity: 0.4; */
+  display: block;
+  margin: 0;
+  padding: 10px 12px;
+  color: white;
+  font-weight: 600;
+  /* opacity: 0.4; */
+  font-family: "Oswald", sans-serif;
+  margin-left: 3rem;
+  font-family: "Oswald", sans-serif;
 }
 
 .nav-current a,
 .site-head a:hover {
   text-decoration: none;
-  opacity: 1;
+  opacity: 0.5;
 }
 
 .nav-logo {
@@ -320,10 +335,19 @@ body {
   .nav {
     width: 100%;
     padding: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     margin: 3vw 0 0 0;
+    justify-content: center;
+    height: calc(90vh - 60px);
   }
   .site-head-left {
     order: 2;
@@ -374,6 +398,8 @@ body {
     transition: transform 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99),
       opacity 0.9s cubic-bezier(0.4, 0.01, 0.165, 0.99);
     transform: scale(1) translateY(0px);
+    font-size: 4rem;
+    line-height: 10rem;
   }
   .site-head-open .nav-current a {
     border-bottom: var(--color-base) 2px solid;
@@ -394,13 +420,24 @@ body {
 /* Home page */
 
 .hero {
-  padding-top: calc(30vh - 60px);
+  padding-top: calc(40vh - 60px);
   height: calc(100vh - 60px);
+}
+
+.hero > .email {
+  position: fixed;
+  text-decoration: underline;
+  transform: rotate(-90deg);
+  left: -5vw;
+  top: calc(45vh - 60px);
+  color: #c6c6c6;
+  font-family: "Oswald", sans-serif;
 }
 
 .hero > p {
   color: #b4b4b4;
   width: 60vw;
+  padding-left: 10vw;
 }
 
 .hero > img.hero-mobile {
@@ -409,9 +446,28 @@ body {
 .hero > img.hero-desktop {
   display: block;
   margin-bottom: 5vh;
+  padding-left: 10vw;
+}
+
+.hero > .social {
+  position: absolute;
+  top: calc(90vh - 60px);
+}
+
+.hero > .social > a {
+  margin-right: 2rem;
 }
 
 @media (max-width: 700px) {
+  .hero {
+    padding-top: calc(25vh - 60px);
+  }
+  .hero > p {
+    padding-left: 0;
+  }
+  .hero > .email {
+    display: none;
+  }
   .hero > img.hero-mobile {
     display: block;
   }
