--- a/src/utils/css/screen.css
+++ b/src/utils/css/screen.css
@@ -54,7 +54,8 @@ body {
 /* ---------------------------------------------------------- */
 
 .site-wrapper {
-  padding: 5vw;
+  /* padding: 5vw; */
+  padding: 3vw 5vw;
   min-height: 100vh;
 }
 @media (max-width: 850px) {
@@ -430,13 +431,26 @@ body {
 }
 
 .hero > .email {
-  position: fixed;
+  /* position: fixed;
   text-decoration: underline;
   transform: rotate(-90deg);
   left: -5vw;
   top: calc(45vh - 60px);
-  color: #c6c6c6;
+  color: #c6c6c6; */
   font-family: "Oswald", sans-serif;
+  position: absolute;
+  -webkit-transform-origin: left top;
+  /* Safari */
+  -webkit-transform: rotate(-90deg) translateX(-100%);
+
+  /* Firefox */
+  -moz-transform: rotate(-90deg) translateX(-100%);
+
+  /* IE */
+  -ms-transform: rotate(-90deg) translateX(-100%);
+
+  /* Opera */
+  -o-transform: rotate(-90deg) translateX(-100%);
 }
 
 .hero > p {
@@ -456,7 +470,7 @@ body {
 
 .hero > .social {
   position: absolute;
-  top: calc(90vh - 100px);
+  top: calc(83vh - 100px);
 }
 
 .hero > .social > a {
