removed unused google font

--- a/src/utils/css/components/global.css
+++ b/src/utils/css/components/global.css
@@ -1,7 +1,7 @@
 /* Reset
 /* ---------------------------------------------------------- */
 
-@import url("https://fonts.googleapis.com/css2?family=Oswald&family=Prompt:wght@200&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Oswald&family=Prompt:wght@200&display=swap"); */
 
 html,
 body,
